// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create a Form should use a single FormGroup's title as a Form title if one is not set 1`] = `
<div
  class="Form-form-0"
  style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; --ui5wcr_form_full_span: span 24; grid-template-columns: repeat(24, 1fr);"
>
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    To be Form title
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
</div>
`;

exports[`Create a Form size rate L; should create Label and Element with 33% and 66% width respectively and display: flex for top FormItem div 1`] = `
<div
  class="Form-form-0"
  style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; --ui5wcr_form_full_span: span 12; grid-template-columns: repeat(12, 1fr);"
>
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>
  <ui5-title
    class="FormGroup-title-0"
    level="H5"
  >
    Group 1
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
  <ui5-title
    class="FormGroup-title-0"
    level="H5"
  >
    Group 2
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
</div>
`;

exports[`Create a Form size rate M; should create Label and Element with 16% and 83% width respectively and display: flex for top FormItem div 1`] = `
<div
  class="Form-form-0"
  style="--ui5wcr_form_content_span: 10; --ui5wcr_form_label_span: 2; --ui5wcr_form_full_span: span 12; grid-template-columns: repeat(12, 1fr);"
>
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>
  <ui5-title
    class="FormGroup-title-0"
    level="H5"
  >
    Group 1
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
  <ui5-title
    class="FormGroup-title-0"
    level="H5"
  >
    Group 2
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
</div>
`;

exports[`Create a Form size rate S; should create Label and Element with 100% width and display: block for top FormItem div 1`] = `
<div
  class="Form-form-0"
  style="--ui5wcr_form_content_span: 12; --ui5wcr_form_label_span: 12; --ui5wcr_form_full_span: span 12; grid-template-columns: repeat(12, 1fr); --ui5wcr_form_label_text_align: start;"
>
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>
  <ui5-title
    class="FormGroup-title-0"
    level="H5"
  >
    Group 1
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
  <ui5-title
    class="FormGroup-title-0"
    level="H5"
  >
    Group 2
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
</div>
`;

exports[`Create a Form size rate XL; should create Label and Element with 33% and 66% width respectively and display: flex for top FormItem div 1`] = `
<div
  class="Form-form-0"
  style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; --ui5wcr_form_full_span: span 24; grid-template-columns: repeat(24, 1fr);"
>
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>
  <ui5-title
    level="H5"
    style="padding-bottom: 0.75rem; grid-column: span 12;"
  >
    Group 1
  </ui5-title>
  <ui5-title
    level="H5"
    style="padding-bottom: 0.75rem; grid-column: span 12;"
  >
    Group 2
  </ui5-title>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 13;"
    wrap="true"
  >
    item 1:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Text"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 1;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
  <ui5-label
    class="FormItem-label-0"
    style="grid-column-start: 13;"
    wrap="true"
  >
    item 2:
  </ui5-label>
  <div
    class="FormItem-content-0"
  >
    <ui5-input
      type="Number"
      value-state="None"
    />
  </div>
</div>
`;
